# mcp-dockmaster

./: .gitignore  .nxignore  .prettierrc  CLAUDE.md  LICENSE.md  PROJECT_STATUS.md  README.md  claude-imports.json  deploy.sh  deployment.log.tmp  export-servers.js  exported-servers.json  import-servers.js  nx.json  package-lock.json  package.json  rust-export.json  tsconfig.base.json
apps/mcp-dockmaster-cli/: Cargo.toml  Cargo.toml.bak  project.json
apps/mcp-dockmaster-cli/src/: export.rs  main.rs
apps/mcp-dockmaster/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.conf.json.bak  tauri.conf.local.json
apps/mcp-dockmaster/src-tauri/src/: lib.rs  main.rs  mcp_core_utils.rs  tray.rs  updater.rs  windows.rs
apps/mcp-dockmaster/src-tauri/src/features/: database.rs  http_server.rs  mcp_proxy.rs  mod.rs
apps/mcp-proxy-server/: Cargo.toml  Cargo.toml.bak  project.json
apps/mcp-proxy-server-rust/: Cargo.toml
apps/mcp-proxy-server-rust/src/: main.rs
apps/mcp-proxy-server-rust/src/server/: mcp_client.rs  mcp_server.rs  mod.rs  proxy.rs  router.rs  types.rs
apps/mcp-proxy-server/scripts/: compile-single-binary.ts
apps/mcp-proxy-server/src/: index.ts  main.rs  proxyRequest.ts  types.ts
apps/mcp-proxy-server/src/internal-tools/: MCPConfig.ts  MCPInstall.ts  MCPSearch.ts  index.ts
apps/mcp-proxy-server/src/server/: mcp_proxy_client.rs  mcp_proxy_server.rs  mod.rs  router.rs
ci-scripts/: generate-updates-json.ts
libs/mcp-core/: .gitignore  ARCHITECTURE.md  Cargo.toml  Cargo.toml.bak  README.md  file_aggregator.sh  project.json
libs/mcp-core/examples/: mcp_server.rs  mcp_server_example.rs
libs/mcp-core/migrations/sqlite/2025-03-06-000001_create_initial_tables/: down.sql  up.sql
libs/mcp-core/migrations/sqlite/2025-03-07-000001_normalize_tool_schema/: down.sql  up.sql
libs/mcp-core/migrations/sqlite/2025-03-08-000001_update_server_tools_table/: down.sql  up.sql
libs/mcp-core/migrations/sqlite/2025-03-09-000001_add_is_active_to_server_tools/: down.sql  up.sql
libs/mcp-core/migrations/sqlite/2025-03-18-000001_add_app_settings_table/: down.sql  up.sql
libs/mcp-core/migrations/sqlite/2025-06-10-000001_add_custom_server_support/: down.sql  up.sql
libs/mcp-core/src/: app_context.rs  database.rs  dm_process.rs  error.rs  http_server.rs  jsonrpc_frame_codec.rs  lib.rs  mcp_proxy.rs  mcp_proxy.rs.bak  mcp_state.rs  models.rs  process.rs  process_manager.rs  registry.rs  spawned_process.rs  validation.rs
libs/mcp-core/src/api/: mod.rs  routes.rs  server.rs
libs/mcp-core/src/api/handlers/: health_handler.rs  mod.rs  tools_handler.rs
libs/mcp-core/src/api/rpc/: errors.rs  mod.rs  request.rs  response.rs
libs/mcp-core/src/application/: context.rs  mod.rs
libs/mcp-core/src/application/dto/: mod.rs  tool_dto.rs
libs/mcp-core/src/application/services/: mod.rs  tool_service.rs
libs/mcp-core/src/config/: mod.rs
libs/mcp-core/src/core/: core_database.rs  core_mcp_proxy.rs  mcp_core.rs  mcp_core_database_ext.rs  mcp_core_installers_ext.rs  mcp_core_proxy_ext.rs  mcp_core_runtimes_ext.rs  mod.rs
libs/mcp-core/src/database/: README.md  db_manager.rs  migration.rs  mod.rs
libs/mcp-core/src/domain/: errors.rs  mod.rs  services.rs  traits.rs
libs/mcp-core/src/domain/entities/: mod.rs  tool.rs
libs/mcp-core/src/domain/value_objects/: mod.rs  tool_id.rs
libs/mcp-core/src/http_server/: handlers.rs  mod.rs  routes.rs
libs/mcp-core/src/infrastructure/: mod.rs  process.rs  repository.rs
libs/mcp-core/src/infrastructure/persistence/: mod.rs  sqlite_tool_repository.rs
libs/mcp-core/src/infrastructure/process_management/: mock_process_manager.rs  mod.rs  tokio_process_manager.rs
libs/mcp-core/src/mcp_installers/: install_claude.rs  install_cursor.rs  install_cursor_after_0470.rs  install_cursor_before_0470.rs  install_errors.rs  install_paths.rs  mod.rs  process_manager.rs
libs/mcp-core/src/mcp_protocol/: mod.rs  stdio_transport.rs
libs/mcp-core/src/mcp_proxy/: mod.rs  process_lifecycle.rs  registration.rs  rpc_io.rs  tool_orchestration.rs
libs/mcp-core/src/mcp_server/: README.md  handlers.rs  mcp_client_manager.rs  mcp_router.rs  mcp_server.rs  mcp_tools_service.rs  mod.rs  notifications.rs  registry_cache.rs  session_manager.rs  tools.rs
libs/mcp-core/src/mcp_server_implementation/: mcp_server.rs  mod.rs  notifications.rs  registry_cache.rs  tools.rs
libs/mcp-core/src/mcp_state/: mcp_state.rs  mcp_state_process_utils.rs  mod.rs  process_manager.rs  tokio_child_process_custom.rs
libs/mcp-core/src/models/: error.rs  mod.rs  models.rs  tool_db.rs  types.rs
libs/mcp-core/src/registry/: mod.rs  registry_cache.rs  registry_search.rs  registry_service.rs  server_registry.rs  tool_registry.rs
libs/mcp-core/src/schema/: mod.rs
libs/mcp-core/src/tests/: mcp_server_mockup_test.rs
libs/mcp-core/src/utils/: command.rs  github.rs  http_client.rs  mod.rs  process.rs
libs/mcp-core/tests/: it_mod.rs  mod.rs
libs/mcp-core/tests/integration/: mcp_server_mockup_test.rs  mcp_server_mockup_test.rs.bak
libs/mcp-core/tests/integration/resources/mcp-server-hello-world/: package-lock.json  package.json  tsconfig.json
libs/mcp-core/tests/integration/resources/mcp-server-hello-world/src/: index.ts
libs/mcp-core/tests/integration/resources/mcp-server-hello-world/src/handlers/: hello-world.ts  utils.ts
libs/mcp-core/tests/it/: mcp_server_mockup_test.rs
libs/mcp-core/tests/it/resources/mcp-server-hello-world/: package.json
libs/mcp-core/tests/it/resources/mcp-server-hello-world/src/: tools.ts  types.ts
libs/mcp-core/tests/it/resources/mcp-server-hello-world/tests/: hello-world.test.js
libs/mcp-core/tests/unit/: db_manager_tests.rs  github_tests.rs  mcp_core_runtimes_ext.rs  server_tool_info_db_tests.rs  server_tool_info_deserialization_tests.rs  server_tool_info_tests.rs  template_resolution_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_server.rs  lib.rs  main.rs  mcp_proxy.rs  tray.rs
src-tauri/src/features/: http_server.rs  mcp_proxy.rs  mod.rs
(+133 files in other folders)
