[package]
name = "mcp-dockmaster-cli"
version = "0.0.0"
edition = "2021"
description = "CLI for MCP Dockmaster"
authors = ["MCP Team"]

[dependencies]
mcp_core = { path = "../../libs/mcp-core" }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
log = "0.4.26"
env_logger = "0.11.6"
