[package]
name = "mcp-dockmaster-cli"
version = "0.3.1"
edition = "2021"
description = "CLI for MCP Dockmaster"
authors = ["MCP Team"]

[dependencies]
mcp_core = { path = "../../libs/mcp-core" }
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
log = "0.4.26"
env_logger = "0.11.6"
dirs = "6.0.0"
anyhow = "1.0.98"
