[package]
name = "mcp-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["io-util", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tower = "0.5.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "22134eb33e249a3b3ae6c0153b0176e4dd532220", features = ["client", "server", "transport-sse-client", "transport-sse-server", "transport-child-process"] }
