[package]
name = "mcp-proxy-server"
version = "0.3.1"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["io-util", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tower = "0.5.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "a66f66ae345a0fafde1e2ee496ec137d77aef82a", features = [
    "client",
    "server",
    "reqwest",
    "transport-sse-client",
    "transport-sse-server",
    "transport-child-process",
    "transport-io",
] }
