[package]
name = "mcp_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for MCP Dockmaster"
authors = ["MCP Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
axum = { version = "0.8.1", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
hyper = "1.6.0"
log = "0.4.26"
thiserror = "2.0.12"
env_logger = "0.11.6"
directories = "6.0.0"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }

[lib]
name = "mcp_core"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] } 
serial_test = "3.0.0"
tempfile = "3.10.1"          
