[package]
name = "mcp_dockmaster_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for MCP Dockmaster"
authors = ["MCP Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
axum = { version = "0.8.1", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.6.2", features = ["cors"] }
hyper = "1.6.0"
log = "0.4.26"
thiserror = "2.0.12"
env_logger = "0.11.6"
directories = "6.0.0"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
futures = "0.3.31"
lazy_static = "1.4.0"
anyhow = "1.0"
async-trait = "0.1.87"
toml = "0.8.20"
regex = "1.11.1"
sysinfo = "0.33.1"
once_cell = "1.21"
home = "0.5"
strip-ansi-escapes = "0.2"
# MCP client from the local repository
mcp_sdk_server = { package = "mcp-server", git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "4597d1f" }
mcp_sdk_core = { package = "mcp-core", git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "4597d1f" }
mcp_sdk_client = { package = "mcp-client", git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "4597d1f" }

[lib]
name = "mcp_dockmaster_core"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serial_test = "3.0.0"
tempfile = "3.10.1"
env_logger = "0.10"
