[package]
name = "mcp_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for MCP"
authors = ["MCP Team"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
reqwest = { version = "0.12.15", features = ["json", "gzip"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
hyper = "1.6.0"
log = "0.4.27"
thiserror = "2.0.12"
env_logger = "0.11.8"
directories = "6.0.0"
diesel = { version = "2.2.10", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
futures = "0.3.31"
lazy_static = "1.5.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
toml = "0.8.22"
regex = "1.11.1"
sysinfo = "0.35.1"
once_cell = "1.21.3"
home = "0.5.11"
strip-ansi-escapes = "0.2.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "22134eb33e249a3b3ae6c0153b0176e4dd532220", features = ["client", "server", "transport-sse-server", "transport-child-process", "transport-io"] }

bytes = "1.10.1"
probly-search = "2.0.1"

[lib]
name = "mcp_core"
path = "src/lib.rs"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
