[package]
name = "mcp_dockmaster"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcp_dockmaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
axum = { version = "0.8.1", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
hyper = "1.0"
log = "0.4.26"
thiserror = "2.0.12"
env_logger = "0.11.6"
directories = "6.0.0"
mcp_core = { path = "../../../libs/mcp-core" }

