[package]
name = "mcp_dockmaster"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcp_dockmaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [ "tray-icon", "image-png" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
hyper = "1.6.0"
log = "0.4.27"
thiserror = "2.0.12"
env_logger = "0.11.8"
directories = "6.0.0"
mcp_core = { path = "../../../libs/mcp-core" }
tauri-plugin-log = "2.4.0"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-shell = "2.2.1"
tauri-plugin-updater = "2.7.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-opener = "2.2.6"
